feat: custom endpoint, get employees by optional params

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,4 +5,9 @@ logging:
     root: DEBUG
     com.siemens.bt: DEBUG
     org.hibernate: INFO
-  
+    
+graphql:
+  servlet:
+    mapping: /demo
+    enabled: true
+    corsEnabled: true
