feat: added GraphiQL support

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,8 @@ graphql:
     mapping: /demo
     enabled: true
     corsEnabled: true
+    
+graphiql:
+  mapping: /graphiql
+  endpoint: /demo
+  enabled: true
